--- a/index.html
+++ b/index.html
@@ -16,6 +16,64 @@
 
 
 <body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <section style="background: lightblue;" class="jumbotron">
+                    <h1>Crystal Collector 👑</h1>
+                    <h6>Photo by rawpixel.com from Pexels</h6>
+                </section>
+                <br>
+                <p>You will be given...blah, blah, blah...</p>
+                <br>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>39</h2>
+                    </div>
+                </div>
+                <br>
+
+                <div class="row">
+                    <div class="col-md-3">
+                        <img src="assets/images/green.png" height="200px" width="200px" ;></img>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="./assets/images/pink.png" height="200px" width="200px"></img>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="./assets/images/purple.png" height="200px" width="200px"></img>
+                    </div>
+                    <div class="col-md-3">
+                        <img src="./assets/images/white.png" height="200px" width="200px"></img>
+                    </div>
+                </div>
+                <br>
+
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Wins:</h3>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Losses:</h3>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>Your total score is:</h2>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>0</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
