--- a/index.html
+++ b/index.html
@@ -52,24 +52,27 @@
 
                 <div class="row">
                     <div class="col-md-6">
-                        <h3>Wins:</h3>
+                        <h3 id="win">Wins:</h3>
+                        <h3 id="winNum">0</h3>
                     </div>
                     <div class="col-md-6">
-                        <h3>Losses:</h3>
+                        <h3 id="loss">Losses:</h3>
+                        <h3 id="lossNum">0</h3>
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Your total score is:</h2>
+                        <h2 id="totalScore">Your total score is:</h2>
+                        <h2 id="totalScores">0</h2>
                     </div>
                 </div>
                 <br>
-                <div class="row">
+                <button class="row">
                     <div class="col-md-12">
-                        <h2>0</h2>
+                        <h2>Reset</h2>
                     </div>
-                </div>
+                </button>
             </div>
         </div>
     </div>
