--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
                 <p>You will be given...blah, blah, blah...</p>
                 <br>
                 <div class="row">
-                    <div class="col-md-12">
-                        <h2>39</h2>
+                    <div class="col-md-6">
+                        <h3 id="targetNum">Target Number:<br><br><span id=target>39</span></h3>
+                    </div>
+                    <div class="col-md-6">
+                        <h3 id="currentNum">Current Number:<br><br><span id=current>5</span></h3>
                     </div>
                 </div>
                 <br>
@@ -52,27 +55,18 @@
 
                 <div class="row">
                     <div class="col-md-6">
-                        <h3 id="win">Wins:</h3>
-                        <h3 id="winNum">0</h3>
+                        <h3 id="wins">Wins:<br><br><span id=win>0</span></h3>
                     </div>
                     <div class="col-md-6">
-                        <h3 id="loss">Losses:</h3>
-                        <h3 id="lossNum">0</h3>
+                        <h3 id="losses">losses:<br><br><span id=loss>0</span></h3>
                     </div>
                 </div>
                 <br>
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 id="totalScore">Your total score is:</h2>
-                        <h2 id="totalScores">0</h2>
+                        <button class="row" style="text-align: center">Reset</button>
                     </div>
                 </div>
-                <br>
-                <button class="row">
-                    <div class="col-md-12">
-                        <h2>Reset</h2>
-                    </div>
-                </button>
             </div>
         </div>
     </div>
