--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="./assets/javascript/game.js"></script>
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+
     <title>Crystal Collector Game</title>
 </head>
 
@@ -28,31 +30,39 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <h3 id="targetNum">Target Number:<br><br><span id=target>39</span></h3>
+                        <h3 id="targetNu">Target Number:<br><br><span id=target>39</span></h3>
                     </div>
                     <div class="col-md-6">
-                        <h3 id="currentNum">Current Number:<br><br><span id=current>5</span></h3>
+                        <h3 id="currentNu">Current Number:<br><br><span id=current>5</span></h3>
                     </div>
                 </div>
                 <br>
 
                 <div class="row">
                     <div class="col-md-3">
-                        <img src="assets/images/green.png" height="200px" width="200px" ;></img>
+                        <div id="card">
+                            <div class="front">
+                                Front content
+                            </div>
+                            <div class="back">
+                                Back content
+                            </div>
+                        </div>
+                        <img id="greenFront" src="assets/images/green.png" height="200px" width="200px" ;></img>
+                        <h1 id="greenBack">1</h1>
                     </div>
                     <div class="col-md-3">
-                        <img src="./assets/images/pink.png" height="200px" width="200px"></img>
+                        <img id="pink" src="./assets/images/pink.png" height="200px" width="200px"></img>
                     </div>
                     <div class="col-md-3">
-                        <img src="./assets/images/purple.png" height="200px" width="200px"></img>
+                        <img id="purple" src="./assets/images/purple.png" height="200px" width="200px"></img>
                     </div>
                     <div class="col-md-3">
-                        <img src="./assets/images/white.png" height="200px" width="200px"></img>
+                        <img id="white" src="./assets/images/white.png" height="200px" width="200px"></img>
                     </div>
+
                 </div>
                 <br>
-
-
                 <div class="row">
                     <div class="col-md-6">
                         <h3 id="wins">Wins:<br><br><span id=win>0</span></h3>
@@ -64,13 +74,19 @@
                 <br>
                 <div class="row">
                     <div class="col-md-12">
-                        <button class="row" style="text-align: center">Reset</button>
+                        <button id="reset" onClick="resetGame();">Reset</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <hr>
+                        <h2 id="start" style="text-align:center;"><span class="blinking">Have Fun!!!</span></h2>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-
+    <script src="./assets/javascript/game.js"></script>
 
 </body>
 
