--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://cdn.rawgit.com/nnattawat/flip/master/dist/jquery.flip.min.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="./assets/javascript/jQuery-Plugin-For-CSS3-Powered-Flip-Animations-justFlipIt/src/justFlipIt.js"></script>
+    <script src="./assets/javascript/jQuery-Plugin-For-CSS3-Powered-Flip-Animations-justFlipIt/src/justflipit.min.js"></script>
+
+
+
 
     <title>Crystal Collector Game</title>
 </head>
@@ -38,27 +42,23 @@
                 </div>
                 <br>
 
-                <div class="row">
+                <div class="card">
                     <div class="col-md-3">
-                        <div id="card">
-                            <div class="front">
-                                Front content
-                            </div>
-                            <div class="back">
-                                Back content
-                            </div>
-                        </div>
                         <img id="greenFront" src="assets/images/green.png" height="200px" width="200px" ;></img>
-                        <h1 id="greenBack">1</h1>
+                        <h1 id="greenBack"></h1>
                     </div>
                     <div class="col-md-3">
-                        <img id="pink" src="./assets/images/pink.png" height="200px" width="200px"></img>
+                        <img id="pinkFront" src="./assets/images/pink.png" height="200px" width="200px"></img>
+
+                        <h1 id="pinkBack"></h1>
                     </div>
                     <div class="col-md-3">
-                        <img id="purple" src="./assets/images/purple.png" height="200px" width="200px"></img>
+                        <img id="purpleFront" src="./assets/images/purple.png" height="200px" width="200px"></img>
+                        <h1 id="purpleBack"></h1>
                     </div>
                     <div class="col-md-3">
-                        <img id="white" src="./assets/images/white.png" height="200px" width="200px"></img>
+                        <img id="whiteFront" src="./assets/images/white.png" height="200px" width="200px"></img>
+                        <h1 id="whiteBack"></h1>
                     </div>
 
                 </div>
