updates on js file

--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                 <br>
                 <div class="row">
                     <div class="col-md-6">
-                        <h3 id="targetNu">Target Number:<br><br><span id=target>39</span></h3>
+                        <h3 id="targetNu">Target Number:<br><br><span id=target>0</span></h3>
                     </div>
                     <div class="col-md-6">
-                        <h3 id="currentNu">Current Number:<br><br><span id=current>5</span></h3>
+                        <h3 id="currentNu">Current Number:<br><br><span id=current>0</span></h3>
                     </div>
                 </div>
                 <br>
 
-                <div class="card">
+                <div class="row">
                     <div class="col-md-3">
                         <img id="greenFront" src="assets/images/green.png" height="200px" width="200px" ;></img>
                         <h1 id="greenBack"></h1>
@@ -68,7 +68,7 @@
                         <h3 id="wins">Wins:<br><br><span id=win>0</span></h3>
                     </div>
                     <div class="col-md-6">
-                        <h3 id="losses">losses:<br><br><span id=loss>0</span></h3>
+                        <h3 id="losses">Losses:<br><br><span id=loss>0</span></h3>
                     </div>
                 </div>
                 <br>
