updated the crystals

--- a/index.html
+++ b/index.html
@@ -44,20 +44,20 @@
 
                 <div class="row">
                     <div class="col-md-3">
-                        <img id="greenFront" src="assets/images/green.png" height="200px" width="200px" ;></img>
+                        <img id="greenFront" src="./assets/images/green1.png" height="200px" width="200px" ;></img>
                         <h1 id="greenBack"></h1>
                     </div>
                     <div class="col-md-3">
-                        <img id="pinkFront" src="./assets/images/pink.png" height="200px" width="200px"></img>
+                        <img id="pinkFront" src="./assets/images/pink1.png" height="200px" width="200px"></img>
 
                         <h1 id="pinkBack"></h1>
                     </div>
                     <div class="col-md-3">
-                        <img id="purpleFront" src="./assets/images/purple.png" height="200px" width="200px"></img>
+                        <img id="purpleFront" src="./assets/images/yellow1.png" height="200px" width="200px"></img>
                         <h1 id="purpleBack"></h1>
                     </div>
                     <div class="col-md-3">
-                        <img id="whiteFront" src="./assets/images/white.png" height="200px" width="200px"></img>
+                        <img id="whiteFront" src="./assets/images/white1.png" height="200px" width="200px"></img>
                         <h1 id="whiteBack"></h1>
                     </div>
 
