--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
                     <h6>Photo by rawpixel.com from Pexels</h6>
                 </section>
                 <br>
-                <p>You will be given...blah, blah, blah...</p>
+                <p>You will be given a random number at the start of the game.</p><br>
                 <br>
+                <p>There are four crystals below. By clicking on a crystal you wwill add a specific amount of points to
+                    your total score.</p>
                 <div class="row">
                     <div class="col-md-6">
                         <h3 id="targetNu">Target Number:<br><br><span id=target>0</span></h3>
