updated the instructions

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                             <li>➡️ The value of eah crystal is hidden from you until you click on it.</li>
 
                             <li>➡️ Each time the game starts, the game will change the values of each crystal.</li>
+                            <li>➡️ <b>Note: </b> You need to double click the crystal to flip it and get a value.</li>
                         </ul>
                         <br>
                         <div class="row">
